--- a/main_window.ui
+++ b/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1072</width>
-    <height>792</height>
+    <width>1131</width>
+    <height>834</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="requestTrButton">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>110</y>
+      <x>20</x>
+      <y>130</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -44,16 +44,16 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>410</y>
-      <width>521</width>
-      <height>331</height>
+      <y>440</y>
+      <width>551</width>
+      <height>341</height>
      </rect>
     </property>
    </widget>
    <widget class="QComboBox" name="conditionComboBox">
     <property name="geometry">
      <rect>
-      <x>770</x>
+      <x>830</x>
       <y>40</y>
       <width>181</width>
       <height>31</height>
@@ -63,7 +63,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>770</x>
+      <x>830</x>
       <y>20</y>
       <width>101</width>
       <height>16</height>
@@ -73,43 +73,20 @@
      <string>사용자 조건식</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="accountComboBox">
-    <property name="geometry">
-     <rect>
-      <x>530</x>
-      <y>40</y>
-      <width>181</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>530</x>
-      <y>20</y>
-      <width>101</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>계좌번호</string>
-    </property>
-   </widget>
    <widget class="QListView" name="listView_2">
     <property name="geometry">
      <rect>
-      <x>770</x>
+      <x>830</x>
       <y>80</y>
       <width>281</width>
-      <height>221</height>
+      <height>351</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="monitoringButton">
     <property name="geometry">
      <rect>
-      <x>960</x>
+      <x>1020</x>
       <y>40</y>
       <width>91</width>
       <height>31</height>
@@ -122,10 +99,10 @@
    <widget class="QListView" name="realDataListView">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>410</y>
-      <width>511</width>
-      <height>331</height>
+      <x>570</x>
+      <y>440</y>
+      <width>541</width>
+      <height>341</height>
      </rect>
     </property>
    </widget>
@@ -146,8 +123,8 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>110</y>
-      <width>251</width>
+      <y>90</y>
+      <width>321</width>
       <height>31</height>
      </rect>
     </property>
@@ -156,7 +133,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>90</y>
+      <y>70</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -168,8 +145,8 @@
    <widget class="QPushButton" name="continuousTrButton">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>110</y>
+      <x>130</x>
+      <y>130</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -178,13 +155,228 @@
      <string>연속조회</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>20</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>종목 리스트</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>40</y>
+      <width>311</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QListView" name="stockItemListView">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>80</y>
+      <width>311</width>
+      <height>351</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="setRealButton">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>130</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>실시간등록</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>170</y>
+      <width>461</width>
+      <height>261</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>주문</string>
+    </property>
+    <widget class="QComboBox" name="accountComboBox">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>23</y>
+       <width>181</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>계좌번호</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>73</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>종목</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="orderItemEdit">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>63</y>
+       <width>181</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="orderItemTextLabel">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>70</y>
+       <width>81</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="orderButton">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>210</y>
+       <width>91</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>주문</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>110</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>매매구분</string>
+     </property>
+    </widget>
+    <widget class="QSpinBox" name="spinBox">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>141</y>
+       <width>181</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>1000</number>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="orderPoisitionComboBox">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>100</y>
+       <width>181</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="currentText">
+      <string/>
+     </property>
+     <property name="currentIndex">
+      <number>-1</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>144</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>주문수량</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>173</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>주문가격</string>
+     </property>
+    </widget>
+    <widget class="QSpinBox" name="spinBox_2">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>170</y>
+       <width>181</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>3000000</number>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1072</width>
+     <width>1131</width>
      <height>26</height>
     </rect>
    </property>
